# moolah

./: .gitignore  Cargo.toml  README.md
moolah-core/: Cargo.toml
moolah-core/src/: date_helpers.rs  delta.rs  errors.rs  lib.rs  prediction.rs
moolah-core/src/delta/: custom_delta.rs  daily_delta.rs  monthly_delta.rs  one_time_delta.rs  tests.rs  weekly_delta.rs  yearly_delta.rs
moolah-core/src/delta/monthly_delta/: add_months.rs
moolah-core/src/delta/tests/: custom_delta.rs  daily_delta.rs  monthly_delta.rs  one_time_delta.rs  weekly_delta.rs  yearly_delta.rs
moolah-core/src/delta/yearly_delta/: add_years.rs
moolah-core/src/prediction/: tests.rs
