[package]
name = "moolah-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Moolah's core functionality"
license-file.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
thiserror.workspace = true
